[package]
name = "discover-graph"
version = "0.1.0"
edition = "2024"

[dependencies]
fixedbitset = "0.5.7"
petgraph = "0.8.2"
tracing = "0.1.41"


# Debian https://wiki.debian.org/Rust
[source]
[source.debian-packages]
directory = "/usr/share/cargo/registry"
[source.crates-io]
replace-with = "debian-packages"
